--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     <h1 align="center">我的第一个网页</h1>
 	<hr>
-	<h2>1&nbsp;HTML&nbsp;基础语法</h2>
+	<h2>1&nbsp;HTML&nbsp;基础语法!</h2>
     <h3>1.1&nbsp;<u>标记分类</u></h3>
 	<p>&nbsp;&nbsp;封闭类型&lt;双标记&gt;</p>
 	<p>&nbsp;&nbsp;非封闭类型&lt;单标记&gt;</p>
